<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/PlanoFundoRegister"
    android:paddingTop="120dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="br.senac.sp.l13.segundaapp.Register_Activity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        android:textColor="@color/FonteCor"
        android:background="@color/FundoInputRegister"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/FonteCor"
        android:background="@color/FundoInputRegister"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@color/FundoInputRegister"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/Button"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:gravity="center"
        android:textSize="18sp"
        />
</LinearLayout>
