<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/PlanoDeFundo"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="40dp"
    tools:context="br.senac.sp.l13.segundaapp.LoginStarActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:textColor="@color/Fontecolor"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/useroradresss"
        android:textColor="@color/Fontecolor"
        android:padding="5dp"
        android:textSize="15sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:textSize="18sp"
        android:background="@color/FundoInput"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/Fontecolor"
        android:padding="5dp"
        android:textSize="18sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@color/FundoInput"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:textSize="18sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/Fontecolor"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signbutton"
            android:textColor="@color/Fontecolor"/>

    </LinearLayout>
</LinearLayout>
